--- a/nanobrowse/templates/block_viewer.html
+++ b/nanobrowse/templates/block_viewer.html
@@ -10,100 +10,11 @@
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
   </head>
   <body class="bg-gray-100">
+    {{ block_data.is_change }}
+
     <div class="flex flex-col items-center mx-4 my-6 sm:mx-auto max-w-screen-md">
-      <!-- Sender Address -->
-      <div class="text-center mb-2">
-        <span class="bg-blue-500 text-white text-sm px-2 py-1 rounded break-all">
-          <i class="copy_btn" data-value="{{block_data.sender_account}}"></i>
-          <a href="{{ request.url_root }}account/{{ block_data.sender_account }}">{{ block_data.sender_account }}</a>
-        </span>
-        <p class="text-2xl font-bold text-center">Sender</p>
-      </div>
-
-      <!-- Sender Pin Shape -->
-      <div class="flex flex-col items-center">
-        <div class="w-12 h-12 border-2 border-blue-500 rounded-full"></div>
-        <div class="bg-blue-500 h-6 w-1"></div>
-      </div>
-
-      <div class="flex flex-col items-center">
-        <!-- Send Block -->
-        <div>
-          <div class="border-2 border-blue-500 bg-blue-100 rounded p-2 text-blue-500 mb-20 relative overflow-clip">
-            <span class="text-xs break-all">
-              <i class="copy_btn" data-value="{{block_data.send_block.hash}}"></i>
-              <a href="{{ request.url_root }}block/{{ block_data.send_block.hash }}">
-                {{ block_data.send_block.hash }}
-              </a>
-            </span>
-            <p class="text-2xl font-bold text-center mb-6">{{ block_data.send_block.amount }} Ӿ</p>
-            <span class="absolute bottom-2 left-2 bg-blue-500 text-white text-xs px-2 py-1 rounded">
-              {{ block_data.send_block.status }}
-            </span>
-            <span class="absolute bottom-2 {{ block_data.send_block.left_align }} text-black text-xs px-2 py-1">
-              {{ block_data.send_block.time_ago }}
-            </span>
-            <span class="absolute bottom-2 right-2 bg-blue-500 text-white text-xs px-2 py-1 rounded">
-              {{ block_data.send_block.block_type }}
-            </span>
-          </div>
-        </div>
-
-        <!-- Receive Block -->
-        {% if block_data.receive_block.hash_exists %}
-        <!-- Receive Block -->
-        <div class="border-2 border-green-500 bg-green-100 rounded p-2 text-green-500 relative">
-          <span class="text-xs break-all">
-            <i class="copy_btn" data-value="{{block_data.receive_block.hash}}"></i>
-            <a href="{{ request.url_root }}block/{{ block_data.receive_block.hash }}">
-              {{ block_data.receive_block.hash }}
-            </a>
-          </span>
-          <p class="text-2xl font-bold text-center mb-6">{{ block_data.receive_block.amount }} Ӿ</p>
-          <span class="absolute bottom-2 left-2 bg-green-500 text-white text-xs px-2 py-1 rounded">
-            {{ block_data.receive_block.status }}
-          </span>
-          <span class="absolute bottom-2 {{ block_data.receive_block.left_align }} text-black text-xs px-2 py-1">
-            {{ block_data.receive_block.time_ago }}
-          </span>
-          <span class="absolute bottom-2 right-2 bg-green-500 text-white text-xs px-2 py-1 rounded">
-            {{ block_data.receive_block.block_type }}
-          </span>
-        </div>
-        {% else %}
-        <!-- No Receive Block -->
-        <div class="border-2 border-gray-400 bg-gray-200 rounded p-2 text-gray-500 relative">
-          <p class="text-2xl font-bold text-center mb-6">Ready for recipient to receive</p>
-          <span class="absolute bottom-2 right-2 bg-gray-400 text-white text-xs px-2 py-1 rounded">receive block</span>
-        </div>
-        {% endif %}
-      </div>
-
-      <!-- Receiver Pin Shape  -->
-      {% if block_data.receive_block.hash_exists %}
-      <!-- green -->
-      <div class="flex flex-col items-center">
-        <div class="bg-green-500 h-6 w-1"></div>
-        <div class="w-12 h-12 border-2 border-green-500 rounded-full"></div>
-      </div>
-      {% else %}
-      <!-- gray -->
-      <div class="flex flex-col items-center">
-        <div class="bg-gray-500 h-6 w-1"></div>
-        <div class="w-12 h-12 border-2 border-gray-500 rounded-full"></div>
-      </div>
-      {% endif %}
-
-      <!-- Receiver Address -->
-      <div class="text-center">
-        <p class="text-2xl font-bold text-center">Receiver</p>
-        <span class="bg-green-500 text-white text-sm px-2 py-1 rounded break-all">
-          <i class="copy_btn" data-value="{{block_data.receiver_account}}"></i>
-          <a href="{{ request.url_root }}account/{{ block_data.receiver_account }}">
-            {{ block_data.receiver_account }}
-          </a>
-        </span>
-      </div>
+      {% if block_data.is_change %} {% include 'block_viewer/change.html' %} {% else %} {% include
+      'block_viewer/send_receive.html' %} {% endif %}
     </div>
   </body>
 </html>
